2010-11-27  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #16567: Static DS Conversion Wizard does not check if path is writable and has wrong page-path to check (Thanks to Andreas Lappe)

2010-11-22  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15788: Copy content elements in classic page module
	* Fixed issue: #16512: template->middle() - is not required and deprecated since TYPO3 3.6 
	* Fixed issue: #16270: Custom "rendertype" label are not display in TemplaVoilà Control Center
	* Fixed issue: #11582: No more add icon, if maxitem is reached
	* Fixed bug: #15927: Remove icon »Create new element« if user has no rights to edit the pages content
	* Fixed bug: #15925: Buttons in docheader do not respect user rights for pages table
	* Fixed issue: #16324: Let the auto value for TypoScriptObject path depend on field name (Thanks to 	Christian Mueller)
	* Fixed issue: #16341: Get rid of the full plugin name
	* Fixed issue: #16211: a hsc too much 

2010-11-08  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixued issue: #16243: no context menu for xml files and html files with xml declaration to start mapping process (Thanks to Andreas Kiessling)

2010-11-06  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixued issue: #16212: templavoila floods deprecation log on current TYPO3 trunk (4.5) (Thanks to Andreas Kiessling)

2010-10-29  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Follow-up to: #3450: Web->Page (TV) shows "fieldname" instead of "title" - </br> was supposed to be <br />

2010-10-23  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #16115: content-cells might be very slim
	* Updated manual related to #8051: oldStyleColumnNumber of FCE overrides colPos of Page Template
	* Fixed bug: #16083: Fatal error: mod2/index.php 

2010-10-19  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixued issue: #16070: Sitemap Section Index + TV => Internal Server Error 500, PHP Fatal error